force-app/main/default/objects/Objectif__c/Objectif__c.object-meta.xml
<CustomObject>
    <label>Objectif</label>
    <nameField>
        <label>Objectif Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectifs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>