force-app/main/default/objects/Objectif__c/fields/Objectif__c.field-meta.xml
<CustomField>
    <fullName>Objectif__c</fullName>
    <label>Objectif</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>