force-app/main/default/objects/Objectif__c/fields/Objectif_Logistique__c.field-meta.xml
<CustomField>
    <fullName>Objectif_Logistique__c</fullName>
    <label>Objectif Logistique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>