force-app/main/default/objects/Objectif__c/fields/Objectif_Transit__c.field-meta.xml
<CustomField>
    <fullName>Objectif_Transit__c</fullName>
    <label>Objectif Transit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>