force-app/main/default/objects/Objectif__c/fields/Objectif_Transport_NAT__c.field-meta.xml
<CustomField>
    <fullName>Objectif_Transport_NAT__c</fullName>
    <label>Objectif Transport NAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>