force-app/main/default/objects/Objectif__c/fields/R_alis_Logistique__c.field-meta.xml
<CustomField>
    <fullName>R_alis_Logistique__c</fullName>
    <label>Réalisé Logistique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>