force-app/main/default/objects/Objectif__c/fields/R_alis_Transport_NAT__c.field-meta.xml
<CustomField>
    <fullName>R_alis_Transport_NAT__c</fullName>
    <label>Réalisé Transport NAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>