force-app/main/default/objects/Objectif__c/fields/Realis_Logistique__c.field-meta.xml
<CustomField>
    <fullName>Realis_Logistique__c</fullName>
    <label>Réalisé Logistique</label>
    <summarizedField>Realisation__c.LOGISTIQUE_N__c</summarizedField>
    <summaryForeignKey>Realisation__c.Objectif__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>