force-app/main/default/objects/Objectif__c/fields/Realis_Magasinage__c.field-meta.xml
<CustomField>
    <fullName>Realis_Magasinage__c</fullName>
    <label>Réalisé Magasinage</label>
    <summarizedField>Realisation__c.MAGASINAGE_N__c</summarizedField>
    <summaryForeignKey>Realisation__c.Objectif__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>