force-app/main/default/objects/Objectif__c/fields/Realis_Transit__c.field-meta.xml
<CustomField>
    <fullName>Realis_Transit__c</fullName>
    <label>Réalisé Transit</label>
    <summarizedField>Realisation__c.Transit_N__c</summarizedField>
    <summaryForeignKey>Realisation__c.Objectif__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>