force-app/main/default/objects/Objectif__c/fields/Realis_Transport_INT__c.field-meta.xml
<CustomField>
    <fullName>Realis_Transport_INT__c</fullName>
    <label>Réalisé Transport INT</label>
    <summarizedField>Realisation__c.Transport_INT_N__c</summarizedField>
    <summaryForeignKey>Realisation__c.Objectif__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>