force-app/main/default/objects/Objectif__c/fields/Realise__c.field-meta.xml
<CustomField>
    <fullName>Realise__c</fullName>
    <label>Réalisé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>