force-app/main/default/objects/Objectif__c/fields/RealiseTransit__c.field-meta.xml
<CustomField>
    <fullName>RealiseTransit__c</fullName>
    <label>Réalisé Transit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>