force-app/main/default/objects/Objectif__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <formula>TEXT(YEAR(Date__c)  )+ &quot;_&quot; + TEXT(MONTH(Date__c)  )+&quot;_&quot;+  CASESAFEID(Commercial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueId</label>
    <type>Text</type>
</CustomField>